adição de listagem, busca

--- a/index.html
+++ b/index.html
@@ -16,22 +16,47 @@
             </menu>
             </section>
         <section class="view">
-            <form class="search">
-                <input type="text" id="search" class="search" required>
+            <form class="search" data="search">
+                <input type="text" id="search" class="search" required >
                 <label for="search">Buscar palavra</label>
             </form>
             <form class="newWord" data="newWord">
                 <legend>Nova palavra</legend>
                 <label for="word">Palavra</label>
                 <input type="text" name="word" id="word">
-                <label for="wordDescription">Descrição da palavra</label>
+                <label for="wordDescription">Descrição</label>
                 <input type="" name="wordDescription" id="wordDescription">
                 <button type="submit">Adicionar</button>
             </form>
             <div class="words">
+                <div class="word">Palavaaaaaaaa</div>
                 <div class="word">Palavra</div>
+                <div class="word">Palavra</div>
+                <div class="word">Palavra</div>
+                <div class="word">Palavra</div>
+                <div class="word">Palavra</div>
+                <div class="word">Palavra</div>
+                <div class="word">Palavra</div>
+                <div class="word">Palavra</div>
+                <div class="word">Palavra</div>
+                <div class="word">Palavra</div>
+                <div class="word">Palavra</div>
+                <div class="word">Palavra</div>
+                <div class="word">Palavra</div>
+                <div class="word">Palaaaaaaaaavra</div>
+                <div class="word">Palavra</div>
+                <div class="word">Palavra</div>
+                <div class="word">Palavra</div>
+                <div class="word">Palavra</div>
+                <div class="word">Palavra</div>
+                <div class="word">Palavra</div>
+                <div class="word">Palavra</div>
+                <div class="word">Palavra</div>
+                <div class="word">Palavaaaaaara</div>
+                <div class="word">Palavra</div>
+                
             </div>
         </section>
     </body>
-    <script src="src/main.js"></script>
+    <script type="module" src="src/main.js"></script>
 </html>
