Adição incerção das palavras na view

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <input type="" name="wordDescription" id="wordDescription">
                 <button type="submit">Adicionar</button>
             </form>
-            <div class="words">
+            <div class="words" data="words">
                 <div class="word">Palavaaaaaaaa</div>
-                <div class="word">Palavra</div>
+                <div class="word" id="">Palavra</div>
                 <div class="word">Palavra</div>
                 <div class="word">Palavra</div>
                 <div class="word">Palavra</div>
